# game-on-bevy-in-rust

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
src/: main.rs
